# OpenCV-YOLO-Study

./: .gitignore  main.py  pyproject.toml
src/: 02_video_opencv.py  03_youtube_opencv.py  03_youtube_opencv_yolo.py  04_mediapipe_hands.py  05_mediapipe_face.py  06_mediapipe_pose.py  07_mediapipe_collect_data.py  08_mediapipe_train.ipynb  09_mediapipe_predict.py
