[project]
name = "opencv-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "ultralytics>=8.3.191",
    "yt-dlp>=2025.8.27",
]
